# piper

./: .#README.md  CMakeLists.txt  package.xml
action/: ConstrainedManipulation.action
config/: 7dof_jaco.yaml  fetch.yaml  sim_7dof_jaco.yaml
data/eef/: hat_maneuver.txt  hat_maneuver2.txt  hat_reach.txt  hat_retract.txt  stir4.txt  test.txt
data/eef/urdf/: fetchit_bin.txt
launch/: constrained_manipulation.launch  gpmp2_interface.launch  sim.launch
piper/base/: misc.h  problem.cpp  problem.h  robot.cpp  robot.h  traj.cpp  traj.h
piper/gpmp2_interface/: constrained_manipulation_client.cpp  constrained_manipulator.cpp  constrained_manipulator.h  gpmp2_interface.cpp  gpmp2_interface.h
problem/: constrained_manipulation.yaml  eef_traj.yaml  example_fetch.yaml  example_vector.yaml
